--- a/index.html
+++ b/index.html
@@ -5,8 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>etch-a-sketch</title>
+    <link rel="stylesheet" href="styles.css" />
+    <script type="module" src="/app.js" defer></script>
   </head>
   <body>
     <h1>Etch-a-sketch!</h1>
+    <div class="Container">Container</div>
   </body>
 </html>
