--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>etch-a-sketch</title>
     <link rel="stylesheet" href="styles.css" />
-    <script type="module" src="/app.js" defer></script>
+    <script src="./app.js" defer></script>
   </head>
   <body>
     <h1>Etch-a-sketch!</h1>
