--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
   </head>
   <body>
     <h1>Etch-a-sketch!</h1>
-    <div class="Container">Container</div>
+    <div class="container" data-js="container"></div>
   </body>
 </html>
