--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
   <body>
     <h1>Etch-a-sketch!</h1>
     <div class="container" data-js="container"></div>
+    <button data-js="changeSizeButton">Change size</button>
   </body>
 </html>
