--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <body>
     <h1>Etch-a-sketch!</h1>
     <button data-js="changeSizeButton">Change size</button>
+    <button id="game-reset">Reset grid</button>
     <div class="container" data-js="container"></div>
   </body>
 </html>
