--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
   </head>
   <body>
     <h1>Etch-a-sketch!</h1>
-    <button data-js="changeSizeButton">Change size</button>
-    <button id="game-reset">Reset grid</button>
+    <div class="buttonGroup">
+      <button class="sizeButton" data-js="changeSizeButton">Change size</button>
+      <button class="resetButton" data-js="resetGameButton">Reset grid</button>
+    </div>
     <div class="container" data-js="container"></div>
   </body>
 </html>
