--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       <button class="sizeButton" data-js="changeSizeButton">Change size</button>
       <button class="resetButton" data-js="resetGameButton">Reset grid</button>
     </div>
+    <p>Current Grid:</p>
     <div class="container" data-js="container"></div>
   </body>
 </html>
