--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
         </div>
       </div>
       <div class="right-side">
-        <div class="container" data-js="container"></div>
+        <div class="container-outline">
+          <div class="container" data-js="container"></div>
+        </div>
       </div>
     </div>
   </body>
