--- a/index.html
+++ b/index.html
@@ -6,24 +6,34 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>etch-a-sketch</title>
     <link rel="stylesheet" href="styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,500;0,700;0,900;1,300;1,400&display=swap"
+      rel="stylesheet"
+    />
     <script src="./app.js" defer></script>
   </head>
   <body>
     <div class="flexbox-container">
       <div class="left-side">
-        <h1 class="title">Etch-a-sketch!</h1>
-        <div class="buttonGroup">
-          <button class="sizeButton" data-js="changeSizeButton">
-            Change size
-          </button>
-          <button class="resetButton" data-js="resetGameButton">
-            Reset grid
-          </button>
+        <div class="titleGroup">
+          <h1 class="title">Etch-a-sketch!</h1>
+          <h2 class="subTitle">Simply hover over the black area</h2>
         </div>
       </div>
       <div class="right-side">
         <div class="container-outline">
           <div class="container" data-js="container"></div>
+          <div class="buttonGroup">
+            <button class="sizeButton" data-js="changeSizeButton">
+              Change grid size
+            </button>
+            <button class="resetButton" data-js="resetGameButton">
+              Reset grid
+            </button>
+          </div>
+          <p class="gridSizeInput" data-js="gridSizeInput"></p>
         </div>
       </div>
     </div>
