--- a/index.html
+++ b/index.html
@@ -33,7 +33,9 @@
               Reset grid
             </button>
           </div>
-          <p class="gridSizeInput" data-js="gridSizeInput"></p>
+          <div>
+            <p class="gridSizeInput" data-js="gridSizeInput"></p>
+          </div>
         </div>
       </div>
     </div>
