--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <div class="left-side">
         <div class="titleGroup">
           <h1 class="title">Etch-a-sketch!</h1>
-          <h2 class="subTitle">Simply hover over the black area</h2>
+          <h2 class="subTitle">Simply hover over the dark area</h2>
         </div>
       </div>
       <div class="right-side">
